tests/baselines/reference/assignmentToObject.errors.txt
tests/cases/compiler/assignmentToObject.ts(3,5): error TS2322: Type '{ toString: number; }' is not assignable to type 'Object'.
  Types of property 'toString' are incompatible.
    Type 'number' is not assignable to type '() => string'.


==== tests/cases/compiler/assignmentToObject.ts (1 errors) ====
    var a = { toString: 5 };
    var b: {} = a;  // ok
    var c: Object = a;  // should be error
        ~
!!! error TS2322: Type '{ {|toString|0|}: number; }' is not assignable to type '{|Object|1|}'.
!!! error TS2322:   Types of property 'toString' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type '() => string'.
!!! annotated symbol 0 tests/cases/compiler/assignmentToObject.ts:1:11
!!! annotated symbol 1 /.ts/lib.es5.d.ts:120:11
    